# re-lab

./: .gitignore  GPS_AUDIT.md  README.md  ctflab.yaml  docker-compose.test.yml  main.py  pyproject.toml  server7.py  server8.py  server9.py  setup.cfg  verify_integrity.py
cli/: menu.py  ui.py
conductor/: tracks.md
core/: __init__.py  attack_graph.py  autopilot.py  bus.py  cache.py  classifier.py  config.py  context.py  correlation.py  dashboard.py  encoder.py  events.py  fingerprint.py  http.py  intel.py  intelligence.py  knowledge.py  logger.py  metrics.py  models.py  payloads.py  plugin.py  profiles.py  registry.py  repository.py  rules.py  scanner.py  scoring.py  session.py  stack_classifier.py  waf.py  workflow.py
domains/detection/: differential_sqli.py  graphql_scanner.py  header_injection.py  idor.py  legacy_sqli.py  nosqli_scanner.py  sqli_scanner.py  ssrf_scanner.py  ssti_scanner.py  traversal.py
domains/exploitation/: credential_bruteforcer.py  forge.py  jwt_scanner.py  race.py  reverse_shell.py
domains/reconnaissance/: fuzz.py  fuzzer.py  param_discovery.py  port_scanner.py  recon.py  (+2 more)
payloads/: jwt_secrets.yaml  params.yaml  passwords.yaml  paths.yaml  sqli.yaml  ssti.yaml  traversal.yaml  xss.yaml
plugins/: lfi.py  pickle_wizard.py  prototype_pollution.py  redirect.py  sqli.py  ssti.py  xss.py  xxe.py
profiles/: fast.yaml  stealth.yaml
reports/: html.py
rules/: idor_detection.yaml  nosql_errors.yaml  sql_errors.yaml  traversal_detection.yaml  xss_detection.yaml
tests/: test_scanners.py
workflows/: full-pwn.yaml  master-test.yaml
(+18 files in other folders)
