[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctflab"
version = "5.6.0"
description = "CTFLab — plataforma de treinamento em reverse engineering e pentest web"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13",
    "pyyaml>=6",
    "flask>=3",
    "pyjwt>=2.8",
    "fastapi",
    "uvicorn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ctflab*", "cli*", "core*", "domains*", "plugins*", "reports*"]

[project.scripts]
ctflab = "ctflab.main:main"
